Update configuration of the plug-in

--- a/Source/Plugin/Dictionary/Config.ini
+++ b/Source/Plugin/Dictionary/Config.ini
@@ -2,5 +2,6 @@ Text=Dictionary
 Command=node.exe
 Argument="%UserProfile%\.EditPlus\Plugin\Dictionary\Dictionary.js" $(CurSel)
 Action=1
-Custom File Type=-17
+Save=0
+Custom File Type=-18
 Extensions=*.*
