--- a/Source/Plugin/Translator/Config.ini
+++ b/Source/Plugin/Translator/Config.ini
@@ -2,5 +2,6 @@ Text=Translator
 Command=node.exe
 Argument="%UserProfile%\.EditPlus\Plugin\Translator\Translator.js" "$(CurSel)"
 Action=1
-Custom File Type=-17
+Save=0
+Custom File Type=-18
 Extensions=*.*
