update [Plugin] jslint library version to 2019-09-17

--- a/Source/Plugin/Linter/Config.ini
+++ b/Source/Plugin/Linter/Config.ini
@@ -1,9 +1,10 @@
 Text=Linter
-Command=%UserProfile%\.EditPlus\Plugin\Linter\Linter.cmd
-Argument="$(FilePath)"
+Command=node.exe
+Argument="%UserProfile%\.EditPlus\Plugin\Linter\Linter.js" "$(FilePath)"
 Action=1
 Save=2
 Custom File Type=-18
+Extensions=*.*
 Pattern=33619969
 Pattern Regex=line\: ([0-9]+)\, column\: ([0-9]+)\]
-Extensions=*.*
+Icon=%UserProfile%\.EditPlus\Plugin\Linter\Linter.ico,0
